--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
 	<div class="row">
 	<div class="column column-9"></div>
-	<div class="column column-9"><img class="object-fit_fill" src="trading.jpeg"></div>
+	<div class="column column-9"><img class="object-fit_fill" src="trading.jpeg" width="650" height="300"></div>
 	<div class="column column-9">XXXX</div>
 	</div>
 	
