--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 	</div>
 
 <body>
+	<div class="container"><div class="row">
+	<div class="column column-12">XXXX</div>
+		
 	<div class="row">
 	<div class="column column-9"></div>
 	<div class="column column-9"><img class="object-fit_fill" src="trading.jpeg" width="650" height="300"></div>
