--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		
 	<div class="row">
 	<div class="column column-9"></div>
-	<div class="column column-9"><img class="object-fit_fill" src="trading.jpeg"></div>
+	<div class="column column-9"><img class="object-fit_fill" src="trading.jpeg"></div> </div>
 	<div class="column column-9">XXXX</div>
 	</div>
 	
