--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
 		<i class="fa fa-bars"></i>
 		</a>
 	</div>
+
+	<script>
+function myFunction() {
+  var x = document.getElementById("myTopnav");
+  if (x.className === "topnav") {
+    x.className += " responsive";
+  } else {
+    x.className = "topnav";
+  }
+}
+</script>
 	
 	<div class="container">
 	<div class="row">
@@ -27,7 +38,7 @@
 	<div class="column column-12">XXXX</div>
 		
 	<div class="row">
-	<div class="column column-9"></div>
+	<div class="column column-9">Welcome </div>
 	<div class="column column-9"><img class=".object-fit_scale-down" src="trading.jpeg"></div> </div>
 	<div class="column column-9">XXXX</div>
 	</div>
