--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@ function myFunction() {
 	</div>
 
 <body>
+	<section id="banner">
+	</section>
 	<div class="container"><div class="row">
 		
 	<div class="row">
