--- a/index.html
+++ b/index.html
@@ -1,85 +1,23 @@
-<!doctype html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Beginners-to-Trading-Futures-with-Sosa</title>
-	<link href="sosastocks.css" rel="stylesheet">
-</head>
-	<div class="topnav" id="myTopnav">
-	<a href="#">home</a>
-	<a href="#">Page1</a>
-	<a href="#">Terms</a>
-	<a href="#">Videos</a>
-	<a href="#">About</a>
-<a href="javascript:void(0);" class="icon" onClick="myFunction()">
-		<i class="fa fa-bars"></i>
-		</a>
-	</div>
+    <title>Breaking Down Day Trading Basic - with Sosa</title>
+    <link rel="stylesheet" href="stockspraccss.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Jersey+20&display=swap" rel="stylesheet">
 
-	<script>
-function myFunction() {
-  var x = document.getElementById("myTopnav");
-  if (x.className === "topnav") {
-    x.className += " responsive";
-  } else {
-    x.className = "topnav";
-  }
-}
-</script>
-	
-	<div class="container">
-	<div class="row">
-		<div class="column-colum-1"></div>
-		</div>
-	</div>
+</head>
 
 <body>
-	<div class="container"><div class="row">
-	<div class="column column-12">XXXX</div>
-		
-	<div class="row">
-	<div class="column column-9">Welcome </div>
-	<div class="column column-9"><img class=".object-fit_scale-down" src="trading.jpeg"></div> </div>
-	<div class="column column-9">XXXX</div>
-	</div>
-	
-	<div class="row">
-	<div class="column column-9">
-	<p>
-		
-		<h2>Smart-Money Concept Terms:</h2>
-		<br>1. Accumulation: The process by which institutional investors or "smart money" gradually accumulate large positions in a particular asset over time, often before a significant price increase.<br>
-		</p>
-		<p>
-<br>2. Distribution: The process by which institutional investors or "smart money" gradually sell off large positions in a particular asset to retail investors, often before a significant price decrease.<br>
-<br>3.Wyckoff Method: A technical analysis approach developed by Richard Wyckoff, which focuses on understanding the intentions of large institutional investors in the market.<br>
-<br>4. Footprint Chart: A type of chart that displays volume at price (VAP) data, showing where the majority of trading activity has occurred at various price levels.<br>
-<br>5. Stop Hunt: A market manipulation tactic in which institutional investors intentionally trigger stop-loss orders to cause a price movement that benefits their positions.<br>
-<br>6. Whales: Large institutional investors or market participants who have significant capital and influence over market movements.<br>
-<br>7. Dark Pools: Private exchanges or forums where large institutional investors can trade securities anonymously, away from public market scrutiny.<br>
-<br>8. Market Structure: The overall organization and framework of the financial markets, including the behavior of different market participants such as retail traders, institutional investors, and market makers.<br>
-<br>9. Order Flow: The flow of buy and sell orders into the market, which can provide insight into market sentiment and potential price movements.<br>
-<br>10. Front Running: The unethical practice of placing orders based on advance knowledge of pending trades from other market participants.<br>
-<br>11. Sweep Orders: Market orders that are split into multiple smaller orders and executed across multiple exchanges to quickly fill a large position.<br>
-<br>12. Insider Trading: The illegal practice of trading securities based on material, non-public information about the company.<br>
-<br>13. Market Manipulation: Any action taken to artificially influence the price or trading volume of a security, often for the benefit of the manipulator.<br>
-<br>14. Rogue Trader: A trader who engages in unauthorized or fraudulent trading activities that can result in significant financial losses for their firm.<br>
-<br>15. Market Sentiment: The overall attitude or feeling of market participants towards a particular asset, often reflected in price movements and trading volume.<br>
+    <section id="banner">
+        <img src="images/ict2.jpg" class="logo">
+        <div class="banner-text">
+            <h1>Experience the Thrill of Success</h1>
+            <p>Invest in Yourself</p>
+            <div class="banner-btn"></div>
+            <a href="#"><span></span>Learn More</a>
+            <a href="#"><span></span>Start Today</a>
+        </div>
+    </section>
 
-(ICT) Methodology:
-
-<br>1. The Kill Zone: A specific price zone identified by Inner Circle Trader as a high-probability area for market reversals or significant price movements.<br>
-<br>2. Order Blocks: Price levels where significant buying or selling activity has occurred, often used as potential areas of support or resistance.<br>
-<br>3. Market Maker Method: A trading approach that focuses on understanding the behavior of market makers and liquidity providers in the forex market.<br>
-<br>4. The OTE (Optimal Trade Entry) Zone: A price zone identified by Inner Circle Trader as an optimal entry point for trades based on confluence of factors such as support/resistance levels and Fibonacci retracements.<br>
-<br>5. Stop Run: A market manipulation tactic in which price briefly moves beyond a key level to trigger stop-loss orders before reversing direction.<br>
-<br>6. Confluence: The coming together of multiple technical factors or signals at a particular price level, increasing the likelihood of a significant market reaction.<br>
-<br>7. Market Structure Analysis: The process of analyzing price action and volume data to identify key levels, trends, and patterns in the market.<br>
-<br>8. Kill Zone Trade Setup: A trading setup that occurs within the Kill Zone and meets specific criteria outlined by Inner Circle Trader for high-probability trades.<br>
-<br>9. Risk Management: The process of identifying, assessing, and mitigating potential risks associated with trading activities, including position sizing and stop-loss placement.<br>
-<br>10. Fibonacci Retracement Levels: Key horizontal lines drawn on a price chart to indicate potential levels of support or resistance based on Fibonacci ratios.<br>
-		
-		</p></div>
-	</div>
-</body>
-</html>
+    <div id="sideNav"
