--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>Breaking Down Day Trading Basic - with Sosa</title>
-    <link rel="stylesheet" href="stockspraccss.css">
+    <link rel="stylesheet" href="sosastocks.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Jersey+20&display=swap" rel="stylesheet">
