--- a/index.html
+++ b/index.html
@@ -20,4 +20,15 @@
         </div>
     </section>
 
-    <div id="sideNav"
+    <div id="sideNav">
+        <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Terms</a></li>
+            <li><a href="#">Risk Management</a></li>
+            <li><a href="#">Videos</a></li>
+            <li><a href="#">Account Setup</a></li>
+            </li>
+        </ul>
+        </nav>
+    </div>
