--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
             <li><a href="#">Risk Management</a></li>
             <li><a href="#">Videos</a></li>
             <li><a href="#">Account Setup</a></li>
-            </li>
         </ul>
         </nav>
     </div>
+    <div id="manuBtn">
+        <img src=images/stock2.jpg">
